--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -2,6 +2,7 @@
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:DestoPesto.Views"
+       xmlns:hpl="clr-namespace:Hyperlink"
        Title="DestoPesto"
        BackgroundColor="#0D6EFD"
        xmlns:resources="clr-namespace:DestoPesto"
@@ -25,8 +26,8 @@
 
     <Shell.FlyoutFooterTemplate>
         <DataTemplate>
-            
-            <Grid >
+            <ContentView>
+            <Grid Padding="10,0,0,0" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -39,18 +40,9 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-                
-                <Label Margin="5,0,0,0" Grid.ColumnSpan="2">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{x:Static resources:Properties.Resources.HowItWorks}">
-                                <Span.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.HowItWorksLink}"/>
-                                </Span.GestureRecognizers>
-                            </Span>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
+
+                <hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" >  </hpl:HyperlinkLabel>
+         
                 <Label Grid.Row="1" Margin="5,0,0,0" Grid.ColumnSpan="2">
                     <Label.FormattedText>
                         <FormattedString>
@@ -99,6 +91,7 @@
                 <Image Grid.Row="5" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
                 <Label Grid.Row="5" Grid.Column="1" Text="{Binding AppVersion}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
             </Grid>
+                </ContentView>
         </DataTemplate>
 
     </Shell.FlyoutFooterTemplate>
