--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -27,71 +27,76 @@
     <Shell.FlyoutFooterTemplate>
         <DataTemplate>
             <ContentView>
-            <Grid Padding="10,0,0,0" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
+                <Grid Padding="10,0,0,0" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
 
-                <hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" >  </hpl:HyperlinkLabel>
-         
-                <Label Grid.Row="1" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{x:Static resources:Properties.Resources.Vision}" >
-                                <Span.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.VisionLink}"/>
-                                </Span.GestureRecognizers>
-                            </Span>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Grid.Row="2" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{x:Static resources:Properties.Resources.TermsConditions}">
-                                <Span.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.Accuracy_disclaimerLink}"/>
-                                </Span.GestureRecognizers>
-                            </Span>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Grid.Row="3" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" >
-                                <Span.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}"/>
-                                </Span.GestureRecognizers>
-                            </Span>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Grid.Row="4" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{x:Static resources:Properties.Resources.CookiesPolicy}" >
-                                <Span.GestureRecognizers>
-                                    <!--<TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="https://destopesto.gr/info/cookies_policy"/>-->
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.CookiesPolicyLInk}"/>
-                                </Span.GestureRecognizers>
-                            </Span>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Image Grid.Row="5" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
-                <Label Grid.Row="5" Grid.Column="1" Text="{Binding AppVersion}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
-            </Grid>
-                </ContentView>
+                    <hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" />
+                    <hpl:HyperlinkLabel x:Name="vision" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.VisionLink}" Clicked="vision_Clicked" />
+                    <hpl:HyperlinkLabel x:Name="disclaimer" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.Accuracy_disclaimerLink}" Clicked="disclaimer_Clicked" />
+                    <hpl:HyperlinkLabel x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}" Clicked="PrivacyPolicy_Clicked" />
+                    <hpl:HyperlinkLabel x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}" Clicked="PrivacyPolicy_Clicked" />
+                    <hpl:HyperlinkLabel x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicyLInk}" Clicked="CookiesPolicy_Clicked" />
+
+                    <!--<Label Grid.Row="1" Margin="5,0,0,0" Grid.ColumnSpan="2">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{x:Static resources:Properties.Resources.Vision}" >
+                                    <Span.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.VisionLink}"/>
+                                    </Span.GestureRecognizers>
+                                </Span>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <Label Grid.Row="2" Margin="5,0,0,0" Grid.ColumnSpan="2">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{x:Static resources:Properties.Resources.TermsConditions}">
+                                    <Span.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.Accuracy_disclaimerLink}"/>
+                                    </Span.GestureRecognizers>
+                                </Span>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <Label Grid.Row="3" Margin="5,0,0,0" Grid.ColumnSpan="2">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" >
+                                    <Span.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}"/>
+                                    </Span.GestureRecognizers>
+                                </Span>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <Label Grid.Row="4" Margin="5,0,0,0" Grid.ColumnSpan="2">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{x:Static resources:Properties.Resources.CookiesPolicy}" >
+                                    <Span.GestureRecognizers>
+                                        --><!--<TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="https://destopesto.gr/info/cookies_policy"/>--><!--
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.CookiesPolicyLInk}"/>
+                                    </Span.GestureRecognizers>
+                                </Span>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>-->
+                    <Image Grid.Row="5" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
+                    <Label Grid.Row="5" Grid.Column="1" Text="{Binding AppVersion}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
+                </Grid>
+            </ContentView>
         </DataTemplate>
 
     </Shell.FlyoutFooterTemplate>
