--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -42,11 +42,10 @@
                     </Grid.ColumnDefinitions>
 
                     <hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" />
-                    <hpl:HyperlinkLabel x:Name="vision" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.VisionLink}" Clicked="vision_Clicked" />
-                    <hpl:HyperlinkLabel x:Name="disclaimer" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.Accuracy_disclaimerLink}" Clicked="disclaimer_Clicked" />
-                    <hpl:HyperlinkLabel x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}" Clicked="PrivacyPolicy_Clicked" />
-                    <hpl:HyperlinkLabel x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}" Clicked="PrivacyPolicy_Clicked" />
-                    <hpl:HyperlinkLabel x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicyLInk}" Clicked="CookiesPolicy_Clicked" />
+                    <hpl:HyperlinkLabel Grid.Row="1" x:Name="vision" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.Vision}" Clicked="vision_Clicked" />
+                    <hpl:HyperlinkLabel Grid.Row="2"  x:Name="disclaimer" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.TermsConditions}" Clicked="disclaimer_Clicked" />
+                    <hpl:HyperlinkLabel Grid.Row="3" x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" Clicked="PrivacyPolicy_Clicked" />
+                    <hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />
 
                     <!--<Label Grid.Row="1" Margin="5,0,0,0" Grid.ColumnSpan="2">
                         <Label.FormattedText>
