--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -24,10 +24,7 @@
            VerticalOptions="Center"
            HasShadow="True"
            HeightRequest="400"
-           Padding="0"
-           
-           
-           >
+           Padding="0">
         <Grid >
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
