Οθόνη με submissions φτιάχτηκε το κουμπί

--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -23,7 +23,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
