--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -18,7 +18,7 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid VerticalOptions="CenterAndExpand">
+        <Grid VerticalOptions="EndAndExpand">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -30,14 +30,14 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
 
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="6*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <!--<StackLayout Grid.Row="1" VerticalOptions="Center">-->
@@ -49,10 +49,16 @@
             <!--<Frame BackgroundColor="Transparent"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">-->
             <!--<StackLayout Orientation="Horizontal">-->
             <!--<Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">-->
-            <Image Grid.Column="1"  Grid.Row="1" Source="{extensions:ImageResource DestoPesto.Images.email.png}" HeightRequest="60" WidthRequest="60"   Aspect="AspectFill" Margin="0" />
+
+            <Label Grid.ColumnSpan="2" Grid.Column="1" Text="{x:Static resources:Properties.Resources.WelcomeText}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title" VerticalOptions="EndAndExpand"/>
+            <Label  Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1" Text="{x:Static resources:Properties.Resources.WelcomeEmailPasswordLogin}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header" />
+
+
+
+            <Image Grid.Column="1"  Grid.Row="2" Source="{extensions:ImageResource DestoPesto.Images.email.png}" HeightRequest="60" WidthRequest="60"   Aspect="AspectFill" Margin="0" />
             <!--</Frame>-->
 
-            <Entry Grid.Row="1" Grid.Column="2" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
+            <Entry Grid.Row="2" Grid.Column="2" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
                 <Entry.Behaviors>
                     <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                         <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -64,7 +70,7 @@
             <!--</Frame>-->
             <!--<StackLayout  Orientation="Horizontal">-->
 
-            <Label Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+            <Label Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
 
             <!--</StackLayout>-->
 
@@ -72,9 +78,9 @@
             <!--<Frame BackgroundColor="Transparent" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">-->
             <!--<StackLayout Orientation="Horizontal">-->
             <!--<Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">-->
-            <Image Grid.Row="3" Grid.Column="1" HeightRequest="60" WidthRequest="60"  Source="{extensions:ImageResource DestoPesto.Images.password.png}" Aspect="AspectFill" Margin="0"/>
+            <Image Grid.Row="4" Grid.Column="1" HeightRequest="60" WidthRequest="60"  Source="{extensions:ImageResource DestoPesto.Images.password.png}" Aspect="AspectFill" Margin="0"/>
             <!--</Frame>-->
-            <Entry Grid.Column="2" Grid.Row="3" Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
+            <Entry Grid.Column="2" Grid.Row="4" Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
                 <Entry.Behaviors>
                     <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
                 </Entry.Behaviors>
@@ -82,23 +88,23 @@
             <!--</StackLayout>-->
             <!--</Frame>-->
             <!--<StackLayout  Orientation="Horizontal">-->
-            <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+            <Label Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
             <!--</StackLayout>-->
 
 
 
-            <Label Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center" Text="{x:Static resources:Properties.Resources.ForgetPasswordText}" TextColor="Blue" TextDecorations="Underline" x:Name="forgoPass"></Label>
+            <Label Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center" Text="{x:Static resources:Properties.Resources.ForgetPasswordText}" TextColor="Blue" TextDecorations="Underline" x:Name="forgoPass"></Label>
 
 
             <!--<Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />-->
 
 
-            <Button Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="FillAndExpand" Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
+            <Button Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="FillAndExpand" Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
             <!--<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">-->
-            <Label Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" />
+            <Label Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" />
             <!--</StackLayout>-->
             <!--<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">-->
-            <Label Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" />
+            <Label Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" />
             <!--</StackLayout>-->
 
             <!--<StackLayout Margin="0,25,0,0" Padding="0">
